# info_distribution

./: Cargo.toml
src/: config.rs  graphics.rs  main.rs  map.rs  ndarray_pad.rs  person.rs  resource.rs
