[package]
name = "info_distribution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
show-image = { version = "0.12.1", features = ["image"] }
image = "0.24.2"
ndarray = "0.15.4"
enum-ordinalize = "3.1.10"
